ensure box menu overlap is above page header

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -437,3 +437,5 @@ $z-index-themed-panel-content: 3;
 $z-index-themed-panel-sidebar: 4;
 
 $z-index-video-button: 1;
+
+$z-index-box-menu: 4;
